--- a/upload.html
+++ b/upload.html
@@ -43,6 +43,7 @@
         xmlhttp.open("GET","gethint.php?q="+str,true);
         xmlhttp.send();
     }
+    //Game-ddz-zhongpusai.tu.4679.apk
 </script>
 </body>
 </html>
