--- a/upload.html
+++ b/upload.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <form action="upload.php" method="POST" enctype="multipart/form-data">
-    <input type="file" name="picture" />
+    <input type="text" name="picture" />
     <input type="submit" name="submit"/>
 </form>
 <select id="select">
